[package]
name = "bevy-tetris"
version = "0.1.0"
authors = ["Louis Johnson <louisgjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = 'https://github.com/bevyengine/bevy', branch = 'master'}